--- a/style.css
+++ b/style.css
@@ -1,8 +1,23 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
 
+.parkinsans font {
+  font-family: "Parkinsans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight:300;
+  font-style: normal;
+}
 
 /*Etiqueta*/
 body{
     background-color: rgb(65, 63, 212);
+    font-family:"Parkinsans", sans-serif;
+    font: weight 800px;
+    font-style: normal;
+    
 }
 
 main{
@@ -18,7 +33,7 @@ h1{
 
 /*Clase*/
 .card {
-    width: 300px;
+    width: 200px;
     background-color: rgb(255, 255, 255);
     border-radius: 3%;
     text-align: center;
@@ -26,13 +41,17 @@ h1{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 8px; 
+    margin: 20px; 
+    padding: 10px;
+    border: 3px solid rgb(255, 255, 255);
+    transition: all 0.3s ease-in-out;
 }
 
 .card:hover{
     background-color: rgb(108, 108, 226);
-    transform: scale(1.1);
-    transform: rotate(5deg);
+    transform: scale(1.25);
+    color: white;
+    /*transform: rotate(5deg); */
 }
 .card .caja-contenedora{
     width: 200px;
@@ -45,6 +64,6 @@ h1{
 }
 
 .card p{
-    font-size: 18px;
+    font-size: 22px;
 }
 
